--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShowMe</title>
+    <title>Miraz-Portfolio</title>
     <link rel="stylesheet" href="my-csss.css">
+
 </head>
+
 <body>
-    
+    <!--Tab links-->
+    <div>
+        <button class="tablinks" onclick="openHome(home, 'Home')">Home</button>
+        <button class="tablinks" onclick="openGallery(gallery, 'Gallery')">Gallery</button>
+        <button class="tablinks" onclick="openAboutMe(aboutme, 'AboutMe')">About Me</button>
+        <button class="tablinks" onclick="Contact(contact, 'Contact')">Contact</button>
+
+    </div>
+
 </body>
+
 </html>
