--- a/index.html
+++ b/index.html
@@ -6,19 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miraz-Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins:ital,wght@0,500;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="my-csss.css">
 
 </head>
 
 <body>
-    <!--Tab links-->
-    <div>
-        <button class="tablinks" onclick="openHome(home, 'Home')">Home</button>
-        <button class="tablinks" onclick="openGallery(gallery, 'Gallery')">Gallery</button>
-        <button class="tablinks" onclick="openAboutMe(aboutme, 'AboutMe')">About Me</button>
-        <button class="tablinks" onclick="Contact(contact, 'Contact')">Contact</button>
+    <section class="top-part">
+        <div class="welcome">
+            <h1>Welcome to</h1>
+            <h1><span class="separation">Miraz Meher</span> PortFolio</h1>
+            <h4>Street and Lifestyle Photographer</h4>
+        </div>
+        <div class="welcome">
+            <img src="images/Asset 2.png" alt="">
+        </div>
 
-    </div>
+
+    </section>
+
 
 </body>
 
