box shadow added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
         <div class="welcome">
             <h1>Welcome to</h1>
             <h1><span class="separation">Miraz Meher</span> PortFolio</h1>
-            <h4>Street and Lifestyle Photographer</h4>
+            <h4><span id="bgstreet">Street and Lifestyle Photographer</span></h4>
+            <p id="details">Photography is the art, application, and practice of creating durable images by recording
+                light, either
+                electronically by means of an image sensor, or chemically by means of a light-sensitive material such as
+                photographic film. It is employed in many fields of science, manufacturing (e.g., photolithography), and
+                business, as well as its more direct uses for art, film and video production, recreational purposes,
+                hobby, and mass communication.
+
+            </p>
         </div>
         <div class="welcome">
             <img src="images/Asset 2.png" alt="">
