Menue icon added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
 </head>
 
 <body>
+
     <section class="top-part">
+        <section class="container">
+            <div>
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+        </section>
+
         <div class="welcome">
             <h1>Welcome to</h1>
             <h1><span class="separation">Miraz Meher</span> PortFolio</h1>
@@ -35,8 +44,13 @@
         </div>
 
 
-    </section>
 
+    </section>
+    <section class="middle-part">
+
+
+
+    </section>
 
 </body>
 
