--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 <body>
 
     <section class="top-part">
-        <section class="container">
-            <div>
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
-            </div>
-        </section>
+        <div class="container">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+
 
         <div class="welcome">
             <h1>Welcome to</h1>
@@ -40,13 +39,23 @@
             </p>
         </div>
         <div class="welcome">
-            <img src="images/Asset 2.png" alt="">
+            <img src="images/Asset 1.png" alt="">
         </div>
 
 
 
     </section>
     <section class="middle-part">
+        <h2>My Work</h2>
+        <div class="gallery">
+            <div>
+                <img src="images/Miraz Mahabub_Hazi Muhammad Mohsin College_Bangladesh_Future Potter_Portrait_Color_01670297465.jpg"
+                    alt="">
+            </div>
+            <div>
+                <img src="images/IMG_6935 copy.jpg" alt="">
+            </div>
+        </div>
 
 
 
