image and correction

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body>
 
     <section class="top-part">
-        <div class="container">
+        <!-- <div class="container">
             <div class="bar1"></div>
             <div class="bar2"></div>
             <div class="bar3"></div>
-        </div>
+        </div> -->
 
 
         <div class="welcome">
@@ -46,7 +46,7 @@
 
     </section>
     <section class="middle-part">
-        <h2>My Work</h2>
+        <h2 id="mywork">My Work</h2>
         <div class="gallery">
             <div>
                 <img src="images/Miraz Mahabub_Hazi Muhammad Mohsin College_Bangladesh_Future Potter_Portrait_Color_01670297465.jpg"
