image and correction2

--- a/index.html
+++ b/index.html
@@ -51,10 +51,25 @@
             <div>
                 <img src="images/Miraz Mahabub_Hazi Muhammad Mohsin College_Bangladesh_Future Potter_Portrait_Color_01670297465.jpg"
                     alt="">
+                <figcaption style="text-align: center;">Photo: Future Potter</figcaption>
+                <p>Photography is the art, application, and practice of creating durable images by recording
+                    light, either
+                    electronically by means of an image sensor, or chemically by means of a light-sensitive material
+                    such as
+                    photographic film. It is employed in many fields of science, manufacturing (e.g., photolithography).
+                </p>
             </div>
             <div>
                 <img src="images/IMG_6935 copy.jpg" alt="">
+                <figcaption style="text-align: center;">Photo: Strong BrotherHood</figcaption>
+                <p>Photography is the art, application, and practice of creating durable images by recording
+                    light, either
+                    electronically by means of an image sensor, or chemically by means of a light-sensitive material
+                    such as
+                    photographic film. It is employed in many fields of science, manufacturing (e.g., photolithography).
+                </p>
             </div>
+
         </div>
 
 
